--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
     "http": "^0.0.1-security",
     "mongodb": "^6.20.0",
     "path": "^0.12.7",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "twilio": "^5.10.4"
   }
 }
